--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["Sergey Lazarev <lasest1999@gmail.com>"]
 readme = "README.md"
 packages = [{include = "kiwitcms_tester"}]
+include = [
+    {path = "assets"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
