--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.10"
 pytest = "^7.2.2"
-kiwitcms-junit-xml-plugin = "^11.3"
+kiwitcms-junit-xml-plugin = ">=12.0"
 
 
 [build-system]
